Too many changes to list 💀

--- a/templates/FileBrowser/home.html
+++ b/templates/FileBrowser/home.html
@@ -11,35 +11,35 @@
     <div class="page">
         <header style="margin:0;padding:0;">
             <a href="/"><img class="logo" style="height: 90px;margin-bottom: -10px" src="/Static/Images/veearchives.webp" alt="logo" /></a>
-            <h2 style="vertical-align: middle;"><img style="vertical-align: middle;width:40px;" src="/Static/Images/55px-TodoList.png">Club Penguin Archives Mirror<img style="vertical-align: middle;width:40px;" src="/Static/Images/55px-Administrator.png"></h2>
+            <h2 style="vertical-align: middle;"><img style="vertical-align: middle;width:40px;" src="/Static/Images/55px-TodoList.png">VeeArchives File Browser</h2>
         </header>
         <main style="text-align: center;">
             <div id="privacy" style="padding: 15px; display: inline-flex;">
-                <a href="/Pub/ListDirectory" style="text-align: center">
+                <a href="/FileBrowser/ListDirectory" style="text-align: center">
                     <div>
                             <img src="/Static/Images/files.png" style="width: 50px" alt="files"/>
                             <p>Explore Files</p>
                     </div>
                 </a>
                 <hr style="width: 1px; height: 60px; margin-left: 12px; margin-right: 17px">
-                <a href="/Pub/SearchFiles?__in__=Root" style="align-items: center">
+                <a href="/FileBrowser/SearchFiles?__in__=Root" style="align-items: center">
                     <div>
                             <img src="/Static/Images/search.png" style="width: 50px" alt="files"/>
                             <p>Search Files</p>
                     </div>
                 </a>
                 <hr style="width: 1px; height: 60px; margin-left: 12px; margin-right: 17px">
-                <a href="https://archives.vee.city/ClubPenguin/WikiArchive" style="align-items: center">
+                <a href="/ArchiveCenter/Bugzilla/" style="align-items: center">
                     <div>
                             <img src="/Static/Images/external_link.png" style="width: 50px" alt="files"/>
-                            <p>Wiki Archives</p>
+                            <p>Report Bug</p>
                     </div>
                 </a>
             </div>
         </main>
         <br>
         <footer>
-            <p>Special thanks to <a href="https://solero.me">Solero</a> for archive content</p>
+            <p>Running <a href="https://github.com/t2vee/ArchiveBrowser">ArchiveBrowser</a> - version 0.2.9</p>
             <!--<p>Page Loaded in <span id="pageloadtime">0</span> ms</p>-->
             <p id="performance-metrics">Template: <strong>{{ template_time }}ms</strong> - </p>
         </footer>
